--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -477,10 +477,17 @@ input[readonly] {
     .contacts {
       .item {
         border-color: transparent;
-        height: 3em;
         .icon {
           font-size: 20px;
           margin-right: 10px;
+        }
+        a,
+        a:link,
+        a:visited,
+        a:hover,
+        a:active {
+          color: inherit;
+          text-decoration: none;
         }
         input {
           display: inline-block;
