--- a/gi-pro-mobile/www/templates/registration_step_1.html
+++ b/gi-pro-mobile/www/templates/registration_step_1.html
@@ -1,52 +1,44 @@
 <ion-view view-title="{{'app' | translate}}" hide-nav-bar="true" class="registration">
-  <ion-content class="padding">
-    <h4 class="title">{{'app' | translate}}</h4>
-    <h5>{{'register_new_account' | translate}}</h5>
-
-    <!--
-    <form name="myForm">
-      <div class="list list-inset">
-        <label class="item item-input item-input-cf">
-          <input type="text" ng-model="registration.email" placeholder="{{'email_placeholder' | translate}}">
-        </label>
-        <label class="item item-input">
-          <input type="password" ng-model="registration.pwd" placeholder="{{'password' | translate}}" ng-required="">
-        </label>
-        <label class="item item-input">
-          <input type="password" ng-model="pw2" placeholder="{{'password' | translate}}" ng-required="" pw-check='registration.pwd'>
-        </label>
+  <ion-content>
+    <div class="header-title title">{{'app' | translate}} {{'app_label' | translate}}</div>
+    <div class="subtitle row">
+      <div class="col col-80 col-offset-10">
+        {{'register_new_account' | translate}}
       </div>
-      <div class="msg-block" ng-show="myForm.$invalid"> <span class="msg-error" ng-show="myForm.pw2.$error.pwmatch">Passwords don't match.</span>
+    </div>
+    <div class="subsubtitle row">
+      <div class="col">
+        {{'register_mandatory_fields' | translate}}
       </div>
-    </form>
-    -->
-
-    <form name="myForm">
-      <div class="list list-inset">
-        <label class="item item-input item-input-cf">
-          <input type="text" ng-model="registration.pec" placeholder="{{'pec_placeholder' | translate}}">
-        </label>
-        <label class="item item-input item-input-cf">
-          <input type="password" id="pw1" name="pw1" ng-model="registration.password" placeholder="{{'password' | translate}}" ng-required="" />
-        </label>
-        <label class="item item-input item-input-cf">
-          <input type="password" id="pw2" name="pw2" ng-model="pw2" ng-required="" placeholder="{{'retype-password' | translate}}" pw-check="registration.password" />
-        </label>
-
-        <div class="msg-block" ng-show="myForm.$invalid">
-          <span class="msg-error" ng-show="myForm.pw2.$error.pwmatch">Passwords don't match.</span>
+    </div>
+    <div class="form-container">
+      <form name="regform1">
+        <div class="list list-inset">
+          <label class="item item-input item-input-cf">
+            <input type="text" ng-model="registration.pec" placeholder="{{'pec_placeholder' | translate}}" ng-required="true">
+          </label>
+          <label class="item item-input item-input-cf">
+            <input type="password" id="pw1" name="pw1" ng-model="registration.password" placeholder="{{'password' | translate}}" ng-required="true" />
+          </label>
+          <label class="item item-input item-input-cf">
+            <input type="password" id="pw2" name="pw2" ng-model="pw2" ng-required="true" placeholder="{{'retype-password' | translate}}" pw-check="registration.password" />
+          </label>
           <!--
           <label for="pw1">Set a password:</label>
           <input type="password" id="pw1" name="pw1" ng-model="registration.email" ng-required="" />
           <label for="pw2">Confirm the password:</label>
           <input type="password" id="pw2" name="pw2" ng-model="pw2" ng-required="" pw-check="registration.email" />
-          <div class="msg-block" ng-show="myForm.$invalid"> <span class="msg-error" ng-show="myForm.pw2.$error.pwmatch">Passwords don't match.</span>
           -->
+          <div class="msg-block" ng-show="regform1.$invalid">
+            <span class="error" ng-show="!regform1.pw2.$error.pwmatch && registration.password">PEC required</span>
+            <span class="error" ng-show="regform1.pw2.$error.pwmatch">{{'passwords_dont_match' | translate}}</span>
+          </div>
         </div>
+        <button class="button button-block button-energized" ng-click="goToStep2()" ng-disabled="!registration.pec || regform1.$invalid">{{'registration2_button_label' | translate}}</button>
+      </form>
+      <div class="bottom">
+        <a ng-click="cancel()">{{'cancel' | translate}}</a>
       </div>
-    </form>
-
-    <button class="button button-block button-energized" ng-click="goToStep2()">{{'registration2_button_label' | translate}}</button>
-    <a ng-click="cancel()">{{'cancel' | translate}}</a>
+    </div>
   </ion-content>
 </ion-view>
