--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -866,6 +866,9 @@ placeautocomplete {
           color: #aaaaaa;
         }
       }
+      /*.item-input-uppercase input {
+        text-transform: uppercase;
+      }*/
       .error {
         color: red;
         font-size: 14px;
