--- a/gi-pro-mobile/www/templates/registration_step_2.html
+++ b/gi-pro-mobile/www/templates/registration_step_2.html
@@ -38,11 +38,11 @@
             </select>
           </label>
           <div class="cf_piva">
-            <label class="item item-input">
+            <label class="item item-input item-input-uppercase">
               <input type="text" ng-model="registration.cf" placeholder="{{'cf_placeholder' | translate}}" ng-required="!registration.piva">
             </label>
             <p>{{'register_or' | translate}}</p>
-            <label class="item item-input">
+            <label class="item item-input item-input-uppercase">
               <input type="text" ng-model="registration.piva" placeholder="{{'piva_placeholder' | translate}}" ng-required="!registration.cf">
             </label>
           </div>
