--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{title}}" class="serviceandprofessionist" hide-back-button="true">
+<ion-view view-title="{{title}}" class="serviceandprofessional" hide-back-button="true">
   <ion-nav-buttons side="left">
     <button class="button back-button buttons  header-item" ng-click="goBack()" ng-hide="!searchBarVisible">
       <i class="icon ion-ios-arrow-back"> </i>
@@ -14,115 +14,107 @@
         <button class="input-button button button-icon clear-button ion-android-close" ng-click="searchString=''"></button>
       </div>
     </div>
-    <button class="button button-icon button-clear ion-search" ng-click="switchSearchBar()" ng-hide="searchBarVisible || !professionistTab"></button>
+    <button class="button button-icon button-clear ion-search" ng-click="switchSearchBar()" ng-hide="searchBarVisible || !professionalTab"></button>
     <!-- not in this phase -->
     <!--
-    <button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionistTab"></button>
+    <button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionalTab"></button>
     -->
-    <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}"
-      ng-click="switchToMap()" ng-hide="searchBarVisible"></button>
+    <button class="button button-icon button-clear" ng-class="{'ion-map':viewAsList, 'ion-ios-list-outline':!viewAsList}" ng-click="switchToMap()"
+      ng-hide="searchBarVisible"></button>
   </ion-nav-buttons>
+  <!-- TABS -->
   <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide': !logged}">
-    <ion-tab title="{{'service_tab' | translate}}" on-select="initServiceMap()" ng-if="logged">
+    <!-- Tabs order inverted due to Ionic bug on tabs with ng-if -->
+    <!-- Services tab -->
+    <ion-tab title="{{'service_tab' | translate}}" on-select="initServicesTab()" ng-if="logged">
       <ion-pane>
-        <ion-content>
-          <!-- filter for services -->
-          <div class="selected-filters row" ng-if="!selectingFilter">
-            <div class="col col-50 selected-service" ng-click="openFilters('service')">
-              <span ng-if="filters.selectedService">{{'selectedService_label'|translate}}:{{filters.selectedService.name}}</span>
-              <span ng-if="!filters.selectedService">{{'allServices_label'|translate}}</span>
+        <ion-content scroll="false">
+          <!-- Filters for services -->
+          <div class="selected-filters row">
+            <!-- services -->
+            <div class="col col-50 selected-service" ng-click="openFilter('services')">
+              <span ng-if="filters.selectedService">{{'selectedService_label' | translate}}: {{filters.selectedService.name}}</span>
+              <span ng-if="!filters.selectedService">{{'allServices_label' | translate}}</span>
             </div>
-            <div class="col col-50 selected-zone" ng-click="openFilters('zone')">
-              <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span>
-              <span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
+            <!-- zones -->
+            <div class="col col-50 selected-zone" ng-click="openFilter('zones')">
+              <span ng-if="filters.selectedZone">{{'selectedZone_label' | translate}}: {{filters.selectedZone.name}}</span>
+              <span ng-if="!filters.selectedZone">{{'allZones_label' | translate}}</span>
             </div>
           </div>
-          <!-- services -->
-          <div class="services-list" ng-if="selectingFilter && selectingServices">
-            {{'selectedService_label'|translate}}
-            <div ng-click="selectFilter('service','service',null)">{{'allServices_label'|translate}}:</div>
-            <div ng-repeat="service in filters.allServices" ng-click="selectFilter('service','service',service)">{{service.name}}</div>
-          </div>
-          <!-- zones -->
-          <div class="zones-list" ng-if="selectingFilter && selectingZones">
-            {{'selectedZone_label'|translate}}
-            <div ng-click="selectFilter('service','zone',null)">{{'allZones_label'|translate}}</div>
-            <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('service','zone',zone)">{{zone.name}}</div>
-          </div>
-          <div class="list-visualization" ng-if="listVisualization">
-            <ion-list class="list">
-              <ion-scroll>
+          <!-- List view -->
+          <div ng-if="viewAsList">
+            <ion-scroll ng-style="styles.resultsList" ng-show="servicesList && servicesList.length">
+              <div class="list results-list services-list">
                 <ion-refresher on-refresh="loadServices()">
                 </ion-refresher>
-                <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})"
-                  ng-if="!!activeServices && activeServices.length > 0" ng-click="openServiceDetails(service)">
-                  <a class="item" ng-click="openDetailsService(service)">
-                    <div><span>{{service.service}}</span></div>
-                    <p>{{service.professional.name}}{{service.professional.surname}}</p>
+                <div class="card" ng-repeat="service in servicesList">
+                  <a class="item" ng-click="openServiceDetails(service)">
+                    <div>
+                      <span>{{service.service}}</span>
+                    </div>
+                    <p>{{service.professional.name}} {{service.professional.surname}}</p>
                     <p class="list-service-cost">{{service.cost}}</p>
                   </a>
                 </div>
-              </ion-scroll>
-            </ion-list>
+              </div>
+            </ion-scroll>
             <ion-infinite-scroll ng-if="!endServices_reached" on-infinite="loadMoreServices()" distance="5%">
             </ion-infinite-scroll>
-            <p ng-hide="filteredServices.length ">{{'services_empty' | translate}}</p>
+            <div class="empty" ng-show="servicesList && !servicesList.length ">{{'services_empty' | translate}}</div>
           </div>
-          <div class="map-visualization" ng-if="!listVisualization">
+          <!-- Map view -->
+          <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServiceMap()"
+              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServicesTab()"
                 id="serviceMap"></leaflet>
             </div>
           </div>
         </ion-content>
       </ion-pane>
     </ion-tab>
-    <ion-tab title="{{'prof_tab' | translate}}" on-select="initProfessionMap()">
+    <!-- Professionals tab -->
+    <ion-tab title="{{'prof_tab' | translate}}" on-select="initProfessionalsTab()">
       <ion-pane>
-        <ion-content>
-          <!-- filter for professionals -->
-          <div class="selected-filters row" ng-if="!selectingFilter">
-            <div class="col col-50 selected-profession" ng-click="openFilters('profession')"> <span ng-if="filters.selectedProfession">{{'selectedProfession_label'|translate}}:{{filters.selectedProfession.name}}</span>
-              <span ng-if="!filters.selectedProfession">{{'allProfession_label'|translate}}</span></div>
-            <div class="col col-50 selected-zone" ng-click="openFilters('zone')">
-              <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span>
-              <span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
+        <ion-content scroll="false" class="has-header">
+          <!-- Filter for professionals -->
+          <div class="row selected-filters">
+            <!-- professions -->
+            <div class="col col-50 selected-profession" ng-click="openFilter('professions')">
+              <span ng-if="filters.selectedProfession">{{'selectedProfession_label' | translate}}: {{filters.selectedProfession.name}}</span>
+              <span ng-if="!filters.selectedProfession">{{'allProfession_label'|translate}}</span>
+            </div>
+            <!-- zones -->
+            <div class="col col-50 selected-zone" ng-click="openFilter('zones')">
+              <span ng-if="filters.selectedZone">{{'selectedZone_label' | translate}}: {{filters.selectedZone.name}}</span>
+              <span ng-if="!filters.selectedZone">{{'allZones_label' | translate}}</span>
             </div>
           </div>
-          <!-- professions -->
-          <div class="professional-list" ng-if="selectingFilter && selectingProfession">
-            {{'selectedProfession_label'|translate}}
-            <div ng-click="selectFilter('profession','profession',null)">{{'allProfession_label'|translate}}</div>
-            <div ng-repeat="profession in filters.allProfessions" ng-click="selectFilter('profession','profession',profession)">{{profession.name}}</div>
-          </div>
-          <!-- zones -->
-          <div class="zones-list" ng-if="selectingFilter && selectingZones">
-            {{'selectedZone_label'|translate}}
-            <div ng-click="selectFilter('profession','zone',null)">{{'allZones_label'|translate}}</div>
-            <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('profession','zone',zone)">{{zone.name}}</div>
-          </div>
-          <div class="list-visualization" ng-if="listVisualization">
-            <ion-list class="list">
-              <ion-scroll>
-                <ion-refresher on-refresh="loadProfessionist()">
+          <!-- List view -->
+          <div ng-if="viewAsList">
+            <ion-scroll ng-style="styles.resultsList" ng-show="professionalsList && professionalsList.length">
+              <div class="list results-list professionals-list">
+                <ion-refresher on-refresh="loadProfessional()">
                 </ion-refresher>
-                <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})"
-                  ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
-                  <a class="item item-avatar" ng-click="openDetailsProf(professionist)">
-                    <img ng-src="{{professionist.imageUrl}}">
-                    <div><span>{{professionist.name}}</span><span>{{professionist.surname}}</span></div>
-                    <p>{{professionist.profession}}</p>
+                <div class="card" ng-repeat="professional in professionalsList">
+                  <a class="item item-avatar" ng-click="openProfessionalDetails(professional)">
+                    <img ng-src="{{professional.imageUrl}}" ng-class="{'placeholder': !professional.imageUrl}">
+                    <div>
+                      <span>{{professional.name}}</span> <span>{{professional.surname}}</span>
+                    </div>
+                    <p>{{professional.profession}}</p>
                   </a>
                 </div>
-              </ion-scroll>
-            </ion-list>
-            <ion-infinite-scroll ng-if="!endProfessionist_reached" on-infinite="loadMoreProfessionist()" distance="5%">
+              </div>
+            </ion-scroll>
+            <ion-infinite-scroll ng-if="!endProfessional_reached" on-infinite="loadMoreProfessional()" distance="5%">
             </ion-infinite-scroll>
-            <p ng-hide="activeProfessionals.length ">{{'professional_empty' | translate}}</p>
+            <div class="empty" ng-show="professionalsList && !professionalsList.length">{{'professional_empty' | translate}}</div>
           </div>
-          <div class="map-visualization" ng-if="!listVisualization">
+          <!-- Map view -->
+          <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionMap()"
+              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionalsTab()"
                 id="professionMap"></leaflet>
             </div>
           </div>
